# mulchd

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  Makefile  README.md  mise.toml  package.json  pyproject.toml  pyrightconfig.json
.claude/skills/mulchd/: REFERENCE.md  SETUP.md  SKILL.md
.github/workflows/: publish.yml
deploy/: .env.example  Dockerfile  docker-compose.local.yml  docker-compose.yml  entrypoint.sh  mulchd.env.example  nginx.conf  traefik.env.example  traefik.yml
docs/: deployment.md  mcp-tools.md
docs/features/: admin-rbac.md  invite-links.md
migrations/models/: 1_20260702000000_add_project_knowledge_language.py  4_20260706135929_update.py
scripts/: demo.sh  seed.py
skill/: mulchd.md
src/migrations/models/: 0_20260701174623_init.py  10_20260722202255_add_instance_events.py  11_20260722194200_instance_events_restrict_project_delete.py  2_20260702174556_update.py  3_20260706133212_update.py  5_20260720183800_update.py  6_20260720185003_add_email_unique.py  7_20260721203347_add_invite_links.py  8_20260722011012_add_admin_grants.py  9_20260722024608_admin_grants_restrict_delete.py
src/mulchd/: admin.py  admin_grants.py  api.py  auth.py  cli.py  config.py  connect.py  domains.py  instance_events.py  invite.py  main.py  models.py  mulch.py  oauth.py  records.py  skill.md  skill_bundle.md
src/mulchd/admin/: __init__.py  _shared.py  activity.py  audit.py  auth.py  (+9 more)
tests/: conftest.py  test_admin.py  test_admin_grants.py  test_api.py  test_audit_ui.py  test_auth.py  test_cli.py  test_connect.py  test_instance_events.py  test_invite.py  test_mcp_tiers.py  test_mcp_tools.py  test_notifications.py  test_oauth.py  test_skill_bundle.py
(+28 files in other folders)
