[project]
name = "mulchd"
version = "0.1.4"
description = "Self-hosted MCP knowledge server for engineering teams"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "mcp>=1.3",
    "tortoise-orm>=0.21",
    "aerich>=0.7",
    "aiofiles>=23.0",
    "pydantic-settings>=2.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
    "itsdangerous>=2.1",
    "asyncpg>=0.29",
    "pyyaml>=6.0",
    "authlib>=1.7.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "black>=24.0",
    "isort>=5.13",
]

[project.scripts]
mulchd = "mulchd.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mulchd"]

[tool.aerich]
tortoise_orm = "mulchd.config.TORTOISE_ORM"
location = "./src/migrations"
src_folder = "./src"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["mulchd"]

[tool.coverage.report]
show_missing = true
omit = ["*/templates/*"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.uv]
package = true

[dependency-groups]
dev = ["pyright>=1.1.411"]

[tool.pyright]
include = ["src", "tests"]
pythonVersion = "3.14"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"
typeCheckingMode = "standard"
reportMissingTypeStubs = false
reportIncompatibleVariableOverride = false
